[gd_scene load_steps=2 format=3 uid="uid://dydxqv8tg37lq"]

[ext_resource type="Script" path="res://Scripts/menuScript.gd" id="1_lp5tr"]

[node name="WinGameScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lp5tr")

[node name="Label" type="Label" parent="."]
offset_right = 1202.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 77
text = "You Won!?!?!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 525.0
offset_top = 375.0
offset_right = 675.0
offset_bottom = 425.0
text = "Main Menu"

[node name="RetryButton" type="Button" parent="."]
offset_left = 525.0
offset_top = 476.0
offset_right = 675.0
offset_bottom = 526.0
text = "Retry"

[node name="QuitButton" type="Button" parent="."]
offset_left = 525.0
offset_top = 574.0
offset_right = 675.0
offset_bottom = 624.0
text = "Quit"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
